[gd_scene load_steps=22 format=3 uid="uid://bbx0ysfrmijaq"]

[ext_resource type="Script" uid="uid://ch15wvis80f7f" path="res://Scripts/Menu Scripts/Options.gd" id="1_mobg2"]
[ext_resource type="FontFile" uid="uid://bug7cx68wokq8" path="res://Assets/Fonts/Poppins-Regular.ttf" id="2_t564k"]
[ext_resource type="Texture2D" uid="uid://elhg8840d10" path="res://Assets/Sprite/KittyIdleSpriteSheet.png" id="3_ifsxo"]
[ext_resource type="Texture2D" uid="uid://bbbyohxwmgp8" path="res://Assets/Buttons/Back Button.png" id="4_4n2uo"]
[ext_resource type="Texture2D" uid="uid://73xxrffo1o5g" path="res://Assets/Buttons/Master Text.png" id="5_ifsxo"]
[ext_resource type="Texture2D" uid="uid://c2ie6ioupobk5" path="res://Assets/Buttons/Mute Music Button.png" id="5_t564k"]
[ext_resource type="Texture2D" uid="uid://d4a63gyxcsqdm" path="res://Assets/Buttons/Music Text.png" id="6_q73oa"]
[ext_resource type="Texture2D" uid="uid://dbxpbe1dp0st4" path="res://Assets/Buttons/SFX Text.png" id="7_5tqif"]
[ext_resource type="Texture2D" uid="uid://mcgbuvhj76uw" path="res://Assets/Buttons/Mute SFX Button.png" id="9_5tqif"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c7hqe"]
bg_color = Color(0.9529412, 0.8901961, 0.77254903, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.9490196, 0.8509804, 0.6666667, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2a13x"]
font = ExtResource("2_t564k")
font_size = 24
outline_size = 4
outline_color = Color(0, 0, 0, 1)
shadow_size = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5dvr8"]
bg_color = Color(0.9529412, 0.8901961, 0.77254903, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.9490196, 0.8509804, 0.6666667, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_uw0ty"]
atlas = ExtResource("3_ifsxo")
region = Rect2(0, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_ac4b6"]
atlas = ExtResource("3_ifsxo")
region = Rect2(320, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2cqt"]
atlas = ExtResource("3_ifsxo")
region = Rect2(640, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_5buhm"]
atlas = ExtResource("3_ifsxo")
region = Rect2(960, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_et8ab"]
atlas = ExtResource("3_ifsxo")
region = Rect2(1280, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_7fq4t"]
atlas = ExtResource("3_ifsxo")
region = Rect2(0, 320, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_c61og"]
atlas = ExtResource("3_ifsxo")
region = Rect2(320, 320, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqh14"]
atlas = ExtResource("3_ifsxo")
region = Rect2(640, 320, 320, 320)

[sub_resource type="SpriteFrames" id="SpriteFrames_ooplh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uw0ty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ac4b6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2cqt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5buhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_et8ab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7fq4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c61og")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqh14")
}],
"loop": true,
"name": &"default",
"speed": 9.0
}]

[node name="Options" type="Control"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 50.0
offset_right = -299.99988
offset_bottom = -540.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mobg2")

[node name="Header" type="Panel" parent="."]
custom_minimum_size = Vector2(300, 100)
layout_mode = 0
offset_left = -10.0
offset_top = -50.0
offset_right = 350.0
offset_bottom = 50.0
theme_override_styles/panel = SubResource("StyleBoxFlat_c7hqe")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_top = -40.0
offset_right = 340.0
offset_bottom = 50.0
text = "Options"
label_settings = SubResource("LabelSettings_2a13x")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PetSlot" type="Panel" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 0
offset_left = -10.0
offset_top = 50.0
offset_right = 350.0
offset_bottom = 736.0
theme_override_styles/panel = SubResource("StyleBoxFlat_5dvr8")

[node name="Kitty" type="AnimatedSprite2D" parent="."]
position = Vector2(35, -1)
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_ooplh")
autoplay = "default"
flip_h = true

[node name="Kitty2" type="AnimatedSprite2D" parent="."]
position = Vector2(305, -1)
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_ooplh")
autoplay = "default"

[node name="BackButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 106.0
offset_top = 410.0
offset_right = 234.0
offset_bottom = 442.0
texture_normal = ExtResource("4_4n2uo")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 62.0
offset_top = 150.0
offset_right = 280.0
offset_bottom = 320.0

[node name="MasterText" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("5_ifsxo")
stretch_mode = 3

[node name="Master Slider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="MusicText" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("6_q73oa")
stretch_mode = 3

[node name="Music Slider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="SFX Text" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("7_5tqif")
stretch_mode = 3

[node name="SFXSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="MusicMuteButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("5_t564k")

[node name="SFXMuteButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("9_5tqif")

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="value_changed" from="VBoxContainer/Master Slider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Music Slider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/MusicMuteButton" to="." method="_on_music_mute_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SFXMuteButton" to="." method="_on_sfx_mute_button_pressed"]
